Fix titles and texts letter spacing globally

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,7 +43,7 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  letter-spacing: -3%;
+  letter-spacing: -1%;
 }
 
 a {
